--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-server.port=9191
+spring.application.name=springboot-instrumentation
 
-logging.level.org.springframework.security=DEBUG
- 
-# security.user.name=user
-# security.user.password: password
-security.user.password=password
+# tracing
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-server.contextPath = /authserver
-
-security.sessions  = if_required
+# metrics
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.access=unrestricted
