http trace working

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=springboot-instrumentation
+spring.application.name=server-app
+server.port=8080
 
 # tracing
 management.tracing.sampling.probability=1.0
