--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -8,3 +8,5 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # metrics
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
+## for latency info
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
