--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Aspect is used to add userId to MDC -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.kafka</groupId>-->
 		<!--			<artifactId>spring-kafka</artifactId>-->
@@ -69,28 +75,28 @@
 			<version>1.6.0</version>
 		</dependency>
 
-
 		<!-- the following is required for tracing -->
-		<!-- uses brave instrumentation (micrometer to brave) -->
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-tracing-bridge-brave</artifactId>
-		</dependency>
-		<!-- reporter to zipkin -->
-		<dependency>
-			<groupId>io.zipkin.reporter2</groupId>
-			<artifactId>zipkin-reporter-brave</artifactId>
-		</dependency>
-		<!-- uses brave instrumentation (micrometer to brave) -->
+<!--		&lt;!&ndash; uses brave instrumentation (micrometer to brave) &ndash;&gt;-->
 <!--		<dependency>-->
 <!--			<groupId>io.micrometer</groupId>-->
-<!--			<artifactId>micrometer-tracing-bridge-otel</artifactId>-->
+<!--			<artifactId>micrometer-tracing-bridge-brave</artifactId>-->
 <!--		</dependency>-->
 <!--		&lt;!&ndash; reporter to zipkin &ndash;&gt;-->
 <!--		<dependency>-->
-<!--			<groupId>io.opentelemetry</groupId>-->
-<!--			<artifactId>opentelemetry-exporter-zipkin</artifactId>-->
+<!--			<groupId>io.zipkin.reporter2</groupId>-->
+<!--			<artifactId>zipkin-reporter-brave</artifactId>-->
 <!--		</dependency>-->
+
+		<!-- uses otel instrumentation (micrometer to otel) -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-otel</artifactId>
+		</dependency>
+		<!-- reporter to zipkin -->
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-exporter-zipkin</artifactId>
+		</dependency>
 
 		<!-- the following is required for metrics -->
 		<!-- so as it provides actuator endpoints -->
