--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,7 +5,12 @@ server.port=8081
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.zipkin.tracing.export.enabled=true
+## to add the baggage to MDC - so we can access in the logs
+management.tracing.baggage.correlation.fields=userId
+#management.tracing.baggage.remote-fields=userId
 
 # metrics
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
+## for latency info (not working)
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
