--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=server-app
+spring.application.name=client-app
 server.port=8080
 
 # tracing
@@ -8,5 +8,5 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # metrics
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
-## for latency info
+## for latency info (does not work)
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
