--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,9 +8,12 @@ management.zipkin.tracing.export.enabled=true
 ## to add the baggage to MDC - so we can access in the logs
 management.tracing.baggage.correlation.fields=userId
 #management.tracing.baggage.remote-fields=userId
+# the following is for propagating the trace context (not applicable for @Async)
+management.observations.annotations.enabled=true
 
 # metrics
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
 ## for latency info (not working)
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
