--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- swagger-ui-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
         <!-- Aspect is used to add userId to MDC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
