--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -8,5 +8,8 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 # metrics
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
+## to add the baggage to MDC - so we can access in the logs
+management.tracing.baggage.correlation.fields=tenantId
+management.tracing.baggage.remote-fields=tenantId
 ## for latency info (does not work)
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
