added gatling tests for tesitng instrumentation

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>client</module>
         <module>server</module>
+        <module>gatling</module>
     </modules>
 
     <name>springboot-instrumentation</name>
