--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=client-app
 server.port=8080
 
-# tracing
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+## tracing
+#management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 # metrics
 management.endpoints.web.exposure.include=*
@@ -13,3 +13,10 @@ management.tracing.baggage.correlation.fields=tenantId
 management.tracing.baggage.remote-fields=tenantId
 ## for latency info (does not work)
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+## Only change for OTEL
+management.otlp.logging.endpoint=http://localhost:4318/v1/logs
+management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
+management.otlp.metrics.export.url=http://localhost:4318/v1/metrics
+# use the flag to make it enabled or disabled
+management.otlp.metrics.export.enabled=true
