tested the branch with otel - logs, metrics, trace - with log userId attribute

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -14,9 +14,17 @@ management.tracing.baggage.remote-fields=tenantId
 ## for latency info (does not work)
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-## Only change for OTEL
+#################################################
+## CHANGE FOR OTLP
+#################################################
+# specify where the otel collector is running with HTTP
 management.otlp.logging.endpoint=http://localhost:4318/v1/logs
 management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
 management.otlp.metrics.export.url=http://localhost:4318/v1/metrics
 # use the flag to make it enabled or disabled
 management.otlp.metrics.export.enabled=true
+
+# enable tracing
+management.tracing.baggage.enabled=true
+# Define which baggage keys should also appear as tags on spans (optional)
+management.tracing.baggage.tag-fields=userId
