--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=server-app
 server.port=8081
 
 # tracing
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+#management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.zipkin.tracing.export.enabled=true
 ## to add the baggage to MDC - so we can access in the logs
 management.tracing.baggage.correlation.fields=userId
@@ -19,3 +19,15 @@ management.metrics.distribution.percentiles-histogram.http.server.requests=true
 ## observation
 # the following is for propagating the trace context
 #management.observations.annotations.enabled=true
+
+
+#################################################
+## CHANGE FOR OTLP
+#################################################
+# specify where the otel collector is running with HTTP
+management.otlp.logging.endpoint=http://localhost:4318/v1/logs
+management.otlp.tracing.endpoint=http://localhost:4318/v1/traces
+management.otlp.metrics.export.url=http://localhost:4318/v1/metrics
+# use the flag to make it enabled or disabled
+#management.otlp.metrics.export.enabled=true
+#management.otlp.logging.export.enabled=false
